change some data

--- a/udacity-c3-deployment/k8s/aws-secret.yaml
+++ b/udacity-c3-deployment/k8s/aws-secret.yaml
@@ -4,5 +4,4 @@ metadata:
   name: aws-secret
 type: Opaque
 data:
-  credentials: ~/.aws/credentials
-  
+  credentials: W2RlZmF1bHRdCmF3c19hY2Nlc3Nfa2V5X2lkID0gQUtJQUpaTUdNSEVWT1dSREtCSUEKYXdzX3NlY3JldF9hY2Nlc3Nfa2V5ID0gSVpDdSt2MG9UbkM4V0Q3OXpMWlhpMXB3ZGJxdUp5Uloyd21yK3UyQgo=
