--- a/udacity-c3-deployment/k8s/pod-example/pod.yaml
+++ b/udacity-c3-deployment/k8s/pod-example/pod.yaml
@@ -4,7 +4,7 @@ metadata:
   name: pod-example
 spec:
   containers:
-  - image: makinwa37/reverseproxy
+  - image: moborhanmostafa/reverseproxy
     name: reverseproxy
     imagePullPolicy: Always          
     resources:
