--- a/udacity-c3-deployment/docker/docker-compose.yaml
+++ b/udacity-c3-deployment/docker/docker-compose.yaml
@@ -11,28 +11,28 @@ services:
   backend-user:
     image: moborhanmostafa/udacity-restapi-user
     environment:
-      POSTGRESS_USERNAME: $POSTGRESS_USERNAME
-      POSTGRESS_PASSWORD: $POSTGRESS_PASSWORD 
-      POSTGRESS_DB: $POSTGRESS_DB 
-      POSTGRESS_HOST: $POSTGRESS_HOST 
-      AWS_REGION: $AWS_REGION 
-      AWS_PROFILE: $AWS_PROFILE 
-      AWS_BUCKET: $AWS_BUCKET
-      JWT_SECRET: $JWT_SECRET
+      POSTGRESS_USERNAME: postgres
+      POSTGRESS_PASSWORD: mypassword
+      AWS_BUCKET: cdr-12345-test
+      AWS_PROFILE: default
+      AWS_REGION: eu-west-3
+      JWT_SECRET: hello
+      POSTGRESS_DB: udacity
+      POSTGRESS_HOST: udacity.cbfh0w8huskn.eu-west-3.rds.amazonaws.com
       URL: "http://localhost:8100"
   backend-feed:
     image: moborhanmostafa/udacity-restapi-feed
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
-      POSTGRESS_USERNAME: $POSTGRESS_USERNAME
-      POSTGRESS_PASSWORD: $POSTGRESS_PASSWORD 
-      POSTGRESS_DB: $POSTGRESS_DB 
-      POSTGRESS_HOST: $POSTGRESS_HOST 
-      AWS_REGION: $AWS_REGION 
-      AWS_PROFILE: $AWS_PROFILE 
-      AWS_BUCKET: $AWS_BUCKET
-      JWT_SECRET: $JWT_SECRET
+      POSTGRESS_USERNAME: postgres
+      POSTGRESS_PASSWORD: mypassword
+      AWS_BUCKET: cdr-12345-test
+      AWS_PROFILE: default
+      AWS_REGION: eu-west-3
+      JWT_SECRET: hello
+      POSTGRESS_DB: udacity
+      POSTGRESS_HOST: udacity.cbfh0w8huskn.eu-west-3.rds.amazonaws.com
       URL: "http://localhost:8100"
   frontend:
     image: moborhanmostafa/udacity-frontend:local
